* add snapshot support
  - backing filename
  - in-image snapshots
* update man pages
* pyqcow
  - add function to set the keys
* add write support ?

File format:
* version 3 support
* reference count support

Tools:
* qcowmount dokan version
  - have it run in background (using CreateProcess)?
  - what about unmount?
  - fix volume size hints
  - create compatible dokan lib

20140729
* updated dependencies

20140625
* code clean up

20140330
* code clean up

20140328
* worked on Python bindings

20140317
* worked on Python bindings
* worked on setup.py

20140315
* updated libfdata

20140131
* worked on Python bindings

20140119
* 2014 update
* updated dependencies

20131211
* worked on Python bindings

20131209
* worked on Python bindings
  - bug fix for read count behavior change

20131204
* fix for zlib versions that export inflateInit2_ instead of inflateInit2
* fix for handling last compressed cluster block

20131203
* worked on Python bindings

20131201
* worked on Python bindings
  - subtle bug fix where python file-like object returns an int object
    instead of long object
  - improved error reporting
* updated libcerror

20131020
* updated libcstring

20131013
* updated dependencies

20130922
* updated msvscpp files
* removed unused libfvalue

20130916
* worked on libcthreads build support

20130831
* updated dependencies
* bug fixes in libqcow and pyqcow
* added libqcow_io_handle_clear
* worked on tests

20130512
* updated dependencies
* worked on Python bindings
* worked on tests

20130501
* worked on compressed images
* updated msvscpp files
* changed libqcow_file_get_size to libqcow_file_get_media_size
* qcowmount:
  - worked on snapshot support
  - worked on dokan support
* QCOW 2 added support for image with last cluster block smaller
  than cluster block size

20130430
* worked on QCOW 1 support

20130428
* worked on encrypted images
* worked on tests
* worked on QCOW 1 support
* worked on snapshots
* worked on compressed images

20130427