@@ -1,17 +1,0 @@
-Mac OS X
-* missing libtoolize
-* building multiple architure binaries
-* building qcowmount
-
-
-Missing libtoolize
-Use glibtoolize instead
-
-
-Building multiple architecture binaries
-See: http://code.google.com/p/libqcow/wiki/Building
-
-
-Building qcowmount
-See: http://code.google.com/p/libqcow/wiki/Mounting
-
