@@ -1,8 +1,9 @@
 [Project]
 name: "libqcow"
 status: "alpha"
+description: "a library to access the QEMU Copy-On-Write (QCOW) image format"
 features: [
-    "debug_output", "tools", "python",
+    "debug_output", "tests", "tools", "python",
     "git", "source_package",
     "cygwin", "gcc", "mingw", "msvscpp",
     "dpkg", "rpm",
@@ -12,7 +13,13 @@ features: [
 url: "https://googledrive.com/host/0B3fBvzttpiiSSzlxcHFxRC0zYTA/"
 
 [git]
-url: "https://code.google.com/p/libqcow/"
+url: "https://github.com/libyal/libqcow.git"
+
+[tests]
+features: ["profiles", "valgrind"]
+profiles: ["libqcow", "pyqcow", "qcowinfo"]
+example_filename1: "image1.qcow2"
+example_filename2: "image2.qcow"
 
 [tools]
 directory: "qcowtools"
@@ -23,7 +30,7 @@ build_dependencies: [
     "zlib-devel (optional but required for compressed image support)",
     "openssl-devel (optional but recommended)"]
 dll_dependencies: [
-    "*TODO describe dependencies*"]
+    "**TODO describe dependencies**"]
 dll_filename: "cygqcow-0.dll"
 
 [gcc]
@@ -39,7 +46,7 @@ build_dependencies: [
     "MinGW build of zlib library and source headers (optional but required for compressed image support)",
     "Windows Crypto API (libadvapi32) (optional but recommended)"]
 dll_dependencies: [
-    "*TODO describe dependencies*"]
+    "**TODO describe dependencies**"]
 dll_filename: "libqcow-1.dll"
 
 [msvscpp]
