@@ -133,7 +133,7 @@ To have other code to determine if libqcow was compiled with libbfio support it 
 
 .Sh BUGS
 Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
-http://code.google.com/p/libqcow/
+https://github.com/libyal/libqcow/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
