@@ -226,8 +226,14 @@ PyObject *pyqcow_check_file_signature(
 		}
 		if( result != 0 )
 		{
+			Py_IncRef(
+			 (PyObject *) Py_True );
+
 			return( Py_True );
 		}
+		Py_IncRef(
+		 (PyObject *) Py_False );
+
 		return( Py_False );
 	}
 	PyErr_Clear();
@@ -299,8 +305,14 @@ PyObject *pyqcow_check_file_signature(
 		}
 		if( result != 0 )
 		{
+			Py_IncRef(
+			 (PyObject *) Py_True );
+
 			return( Py_True );
 		}
+		Py_IncRef(
+		 (PyObject *) Py_False );
+
 		return( Py_False );
 	}
 	PyErr_Format(
@@ -361,8 +373,14 @@ PyObject *pyqcow_check_file_signature(
 	}
 	if( result != 0 )
 	{
+		Py_IncRef(
+		 (PyObject *) Py_True );
+
 		return( Py_True );
 	}
+	Py_IncRef(
+	 (PyObject *) Py_False );
+
 	return( Py_False );
 }
 
@@ -448,8 +466,14 @@ PyObject *pyqcow_check_file_signature_file_object(
 	}
 	if( result != 0 )
 	{
+		Py_IncRef(
+		 (PyObject *) Py_True );
+
 		return( Py_True );
 	}
+	Py_IncRef(
+	 (PyObject *) Py_False );
+
 	return( Py_False );
 
 on_error:
