@@ -612,7 +612,7 @@ PyObject *pyqcow_file_open(
 
 		Py_END_ALLOW_THREADS
 
-		if( result == -1 )
+		if( result != 1 )
 		{
 			pyqcow_error_raise(
 			 error,
@@ -625,11 +625,10 @@ PyObject *pyqcow_file_open(
 
 			return( NULL );
 		}
-		if( result != 0 )
-		{
-			return( Py_True );
-		}
-		return( Py_False );
+		Py_IncRef(
+		 Py_None );
+
+		return( Py_None );
 	}
 	PyErr_Clear();
 
@@ -700,11 +699,10 @@ PyObject *pyqcow_file_open(
 
 			return( NULL );
 		}
-		if( result != 0 )
-		{
-			return( Py_True );
-		}
-		return( Py_False );
+		Py_IncRef(
+		 Py_None );
+
+		return( Py_None );
 	}
 	PyErr_Format(
 	 PyExc_TypeError,
