@@ -22,6 +22,12 @@ Tools:
   - fix volume size hints
   - create compatible dokan lib
 
+20140920
+* changes for project site move
+
+20140801
+* bug fix in Python-bindings
+
 20140729
 * updated dependencies
 
